[tool.poetry]
name = "causal-discovery"
version = "0.1.0"
description = ""
authors = ["tsurubee"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.0"
jupyterlab = "^2.2.0"
statsmodels = "^0.11.1"
matplotlib = "^3.3.0"
lingam = "^1.3"
graphviz = "^0.14.1"
pgmpy = "^0.1.11"
pcalg = "^0.1.9"
pygraphviz = "^1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
